@@ -1,5 +1,8 @@
 package com.junyi.stream;
 
+import com.alibaba.fastjson.JSON;
+
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -10,9 +13,9 @@ import java.util.Map;
  * Description: 通过reduce操作聚合为HashMap
  */
 public class Reduce {
-//    public static void main(String[] args) {
-//        // 按行读取配置文件:
-//        List<String> props = List.of("profile=native", "debug=true", "logging=warn", "interval=500");
+    public static void main(String[] args) {
+        // 按行读取配置文件:
+//        List<String> props = Arrays.asList("profile=native", "debug=true", "logging=warn", "interval=500");
 //        Map<String, String> map = props.stream()
 //                // 把k=v转换为Map[k]=v:
 //                .map(kv -> {
@@ -20,13 +23,11 @@ public class Reduce {
 //                    return Map.of(ss[0], ss[1]);
 //                })
 //                // 把所有Map聚合到一个Map:
-//                .reduce(new HashMap<String, String>(), (m, kv) -> {
+//                .reduce(new HashMap<>(), (m, kv) -> {
 //                    m.putAll(kv);
 //                    return m;
 //                });
-//        // 打印结果:
-//        map.forEach((k, v) -> {
-//            System.out.println(k + " = " + v);
-//        });
-//    }
+//
+//        System.out.println(JSON.toJSONString(map));
+    }
 }
